remove env settings

--- a/vol/templates/components/zilist.html
+++ b/vol/templates/components/zilist.html
@@ -7,7 +7,7 @@
 
     {% for zi in dico %}
     <tr><td>{{zi.strokes}}</td><td>{{zi.pinyin_ton}}</td><td>{{zi.unicode}}</td><td>{{zi.hanzi}}</td>
-        <td>>{{zi.sens}}</td></tr>
+        <td>{{zi.sens}}</td></tr>
     {% endfor %}
     </table>
 
