--- a/vol/assets/style.css
+++ b/vol/assets/style.css
@@ -203,7 +203,7 @@ input:valid {
     left: 0;
     height: 70px;
     width: 100%;
-    background: #888;
+    background: #99aa88;
     color: white;
     padding: 10px 0 0 100px;
     font-size: 16px;
