--- a/vol/templates/base.html
+++ b/vol/templates/base.html
@@ -41,9 +41,16 @@
             <li class="menuitem" style="background-color: darkred" id="wht" hx-trigger="click" hx-get="/zistring" hx-target="#content" hx-swap="innerHTML">
                 Write hanzi text
             </li>
-            <li class="menuitem" hx-trigger="click" hx-get="/getparseform" hx-target="#content" hx-swap="innerHTML">
-              Parse zi string
-            </li>
+            <li onmouseover="enablemenu('parse')" onmouseout="hidemenu('parse')">
+                Parse
+              <!-- onmouseover to restore the hover behavior after hx-on visbility cancellation -->
+              <ul id="parse">
+                <li hx-trigger="click" hx-get="/getparseform" hx-target="#content" hx-swap="innerHTML"
+                    hx-on::before-request="hidemenu('parse')">
+                  Parse zi string (shortcut = s)
+                </li>
+              </ul><!-- end "parse" ul -->
+            </li><!-- end "parse" li -->
           </ul>
         </div><!-- end nav -->
       </div><!-- end header -->
