added character quiz

--- a/vol/assets/style.css
+++ b/vol/assets/style.css
@@ -229,4 +229,9 @@ ul.nobullets {
     margin: 5px;
 }
 
+#kanji {
+    font-size: 40px;
+    margin-left: 40px;
+}
+
 /*# sourceMappingURL=style.css.map */
