--- a/vol/templates/base.html
+++ b/vol/templates/base.html
@@ -51,6 +51,9 @@
                 </li>
               </ul><!-- end "parse" ul -->
             </li><!-- end "parse" li -->
+            <li hx-trigger="click" hx-get="/askquiz" hx-target="#content" hx-swap="innerHTML">
+                Try hanzi quiz
+            </li>
           </ul>
         </div><!-- end nav -->
       </div><!-- end header -->
