--- a/vol/templates/base.html
+++ b/vol/templates/base.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Rust zidian manager</title>
+    <title>Chinese character writer</title>
     <link rel="shortcut icon" type="image/png" href="/assets/favicon.png" />
     <link rel="stylesheet" type="text/css" href="/assets/style.css" />
     <script type="text/javascript" src="/assets/htmx.min.js"></script>
